# telepygram

./: CMakeLists.txt  Changes  Chat.qml  Dialogs.qml  HowToPush  Main.py  Main.qml  NEWS  PhoneCode.qml  PhoneNumber.qml  README.md  data.db  makeclick  manifest.json.in  packages.json  push-helper.json  telepygram.apparmor  telepygram.desktop.in  text
po/: telepygram.bluekenny.pot
push/: push.py
python-lib/: CMakeLists.txt
qml/: Chat.qml  Dialogs.qml  HowToPush  KeyboardRectangle.qml  Main.py  Main.qml  PhoneCall.qml  PhoneCode.qml  PhoneNumber.qml  ProgressCircle.qml
qml/modules/: BlueFunc.py
